<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_competitor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.androidbootcamp.wifi.competitor">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:id="@+id/txtCost"
        android:hint="@string/txtCost" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtCost"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp" >

        <RadioButton
            android:text="@string/radCompetitor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radCompetitor"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/radDied"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radDied"
            android:layout_weight="1" />
    </RadioGroup>

    <Button
        android:text="@string/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/btnSave"
        android:textSize="30sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/btnSave"
        android:layout_alignLeft="@+id/txtCost"
        android:layout_alignStart="@+id/txtCost"
        android:layout_marginTop="60dp"
        android:id="@+id/txtSave" />

    <Button
        android:text="@string/btnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/btnSave"
        android:layout_alignStart="@+id/btnSave"
        android:layout_marginBottom="27dp"
        android:id="@+id/btnHome" />

</RelativeLayout>
