<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.androidbootcamp.wifi.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/money"
        android:layout_marginBottom="24dp"
        android:id="@+id/imgMoney"
        android:layout_above="@+id/btnCompetitor"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:id="@+id/txtTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="24sp" />

    <Button
        android:text="@string/btnOther"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnOther"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/imgMoney"
        android:layout_alignEnd="@+id/imgMoney"
        android:layout_marginBottom="13dp" />

    <Button
        android:text="@string/btnCompetitor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:id="@+id/btnCompetitor"
        android:layout_above="@+id/btnOther"
        android:layout_alignLeft="@+id/btnOther"
        android:layout_alignStart="@+id/btnOther"
        android:layout_alignRight="@+id/btnOther"
        android:layout_alignEnd="@+id/btnOther" />
</RelativeLayout>
